# RightEngine

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  LICENSE  README.md  build_solution.bat  conanfile.txt  format_code.bat  generate_solution.bat  generate_solution.py  prepare_env.bat
Core/: CMakeLists.txt
Core/Source/: Blob.cpp  EASTLIntergration.cpp  Hash.cpp  Log.cpp  PCH.hpp
Core/Source/Public/Core/: Assert.hpp  Blob.hpp  EASTLIntergration.hpp  Hash.hpp  Math.hpp
Editor/: CMakeLists.txt
Editor/Assets/Models/: Tree.fbx  default_cube.fbx
Editor/Assets/Scenes/: Empty.scene  Scene.scene  Scene.yaml
Editor/Assets/Textures/: env_field.hdr  env_parkinglot.hdr  env_studio.hdr  env_waterfall.hdr
Editor/Config/: imgui.ini
Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  Start.cpp
Editor/Source/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  IPanel.hpp  PropertyPanel.cpp  PropertyPanel.hpp  RenderDebugPanel.cpp  RenderDebugPanel.hpp
Editor/Source/Public/: EditorCore.hpp
Editor/Source/Service/: SelectionService.cpp  SelectionService.hpp
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: pbr.frag  pbr.vert  postprocess.frag  postprocess.vert  shadow.frag  shadow.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  test.glsl
Engine/Assets/Shaders/Basic/: basic.frag  hdr_to_cubemap.vert
Engine/Assets/Shaders/Common/: Test.glslh
Engine/Assets/Shaders/Utils/: brdf.frag  brdf.vert  envmap_to_cubemap.frag  envmap_to_cubemap.vert  envmap_to_irr_map.vert  envmap_to_radiance_map.frag  picking.frag
Engine/Source/: Logger.cpp
Engine/Source/Application/: Application.cpp
Engine/Source/Application/Public/: Application.hpp
Engine/Source/Core/: Logger.cpp
Engine/Source/Core/Application/: Application.cpp  Layer.cpp
Engine/Source/Core/Event/: EventDispatcher.cpp
Engine/Source/Core/Launch/: LaunchEngine.cpp
Engine/Source/Core/Loaders/: AssetLoader.cpp  AssetManager.cpp  EnvironmentMapLoader.cpp  MaterialLoader.cpp  MeshLoader.cpp  TextureLoader.cpp
Engine/Source/Core/Public/: Core.h  Core.hpp  Logger.hpp  Types.hpp
Engine/Source/Core/RHI/: Buffer.cpp  DebugRHI.cpp  Device.cpp  FrameBuffer.cpp  Geometry.cpp  GeometryBuilder.cpp  IndexBuffer.cpp  Material.cpp  MeshBuilder.cpp  Renderer.cpp  RendererAPI.cpp  RendererCommand.cpp  RendererState.cpp  RenderingContext.cpp  Sampler.cpp  SceneRenderer.cpp  Shader.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  Texture3D.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  WindowsRenderingContext.cpp
Engine/Source/Core/Scene/: AssetManager.cpp  Camera.cpp  EditorCamera.cpp  Entity.cpp  LightNode.cpp  Scene.cpp  SceneNode.cpp  SceneSerializer.cpp
Engine/Source/Core/Service/: ThreadService.cpp
Engine/Source/Core/Shader/: Shader.cpp
Engine/Source/Core/UI/: ImGuiBuild.cpp  ImGuiLayer.cpp
Engine/Source/Core/Utils/: Filesystem.cpp  Input.cpp  MeshBuilder.cpp  Path.cpp  String.cpp  Timer.cpp  Utils.cpp
Engine/Source/Core/Window/: GLFWWindow.cpp  GLFWWindow.hpp  Window.cpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/Source/Engine/Service/: IService.hpp  ThreadService.cpp  ThreadService.hpp
Engine/Source/Event/: EventDispatcher.cpp
Engine/Source/Event/Public/: DemoEvent.hpp  KeyEvent.hpp
Engine/Source/Launch/: LaunchEngine.cpp
Engine/Source/Launch/Public/: EntryPoint.hpp  LaunchEngine.hpp
Engine/Source/Loaders/: AssetLoader.cpp  AssetManager.cpp  MeshLoader.cpp  TextureLoader.cpp
Engine/Source/Loaders/Public/: TextureLoader.hpp
Engine/Source/Private/Logging/: ILogger.cpp  ILogger.hpp
Engine/Source/Public/: Assert.hpp  Config.hpp  Core.h  EntryPoint.hpp  Logger.hpp  Types.hpp
Engine/Source/RHI/: Device.cpp  RHIHelpers.cpp  Renderer.cpp  RendererCommand.cpp  RendererState.cpp  Sampler.cpp  SceneRenderer.cpp
Engine/Source/RHI/Public/: Buffer.hpp  BufferDescriptor.hpp  CommandBuffer.hpp  CommandBufferDescriptor.hpp  GraphicsPipeline.hpp  GraphicsPipelineDescriptor.hpp  Material.hpp  RHIHelpers.hpp  Renderer.hpp  RendererState.hpp  RenderingContext.hpp  ShaderProgramDescriptor.hpp  Surface.hpp  Texture.hpp
Engine/Source/RHI/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  (+15 more)
Engine/Source/Scene/: SceneSerializer.cpp
Engine/Source/Shaders/: pbr.frag  pbr.vert  simple.frag  simple.vert  skybox.frag  skybox.vert
Engine/Source/UI/: ImGuiLayer.cpp
Engine/Source/Utils/: Filesystem.cpp  Input.cpp  MeshBuilder.cpp  Path.cpp
Engine/Source/Window/: GLFWWindow.cpp
EngineNew/Core/: CMakeLists.txt
EngineNew/Core/Source/: Log.cpp  PCH.hpp  String.cpp
EngineNew/Engine/: CMakeLists.txt
EngineNew/Engine/Source/: PCH.hpp
EngineNew/EngineLauncher/: CMakeLists.txt
Game/: CMakeLists.txt
Game/Assets/Models/: Tree.fbx  default_cube.fbx
Game/Assets/Scenes/: Scene.yaml
Game/Assets/Textures/: env_black.hdr
Game/Source/: GameLayer.cpp  GameLayer.hpp  SandboxLayer.cpp  SandboxLayer.hpp  Start.cpp
Game/Source/Panels/: PropertyPanel.cpp  PropertyPanel.hpp
Game/Source/Utils/: EnvironmentMapLoader.cpp  EnvironmentMapLoader.hpp  MeshLoader.cpp  MeshLoader.hpp
Lib/VulkanMemoryAllocator/: CMakeLists.txt
RHI/: CMakeLists.txt
RHI/Source/: Device.cpp  IContext.cpp  PCH.hpp  RHI.cpp  ShaderCompiler.cpp
RHI/Source/Vulkan/: CommandBuffer.cpp  CommandBuffer.hpp  Fence.cpp  Fence.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanHelpers.hpp  VulkanSampler.cpp  VulkanShader.cpp  VulkanShader.hpp  VulkanShaderCompiler.cpp  VulkanShaderCompiler.hpp
RHITest/: CMakeLists.txt
RHITest/Source/: main.cpp
Sandbox/: CMakeLists.txt
Sandbox/Source/: SandboxLayer.cpp  SandboxLayer.hpp
Src/Core/: CMakeLists.txt
Src/Core/Src/: Blob.cpp  EASTL.natvis  Log.cpp  PCH.hpp  String.cpp
Src/Engine/: CMakeLists.txt
Src/Engine/Src/: PCH.hpp
Src/RHI/: CMakeLists.txt
Src/RHI/Src/: Device.cpp  IContext.cpp  IImguiProvider.cpp  PCH.hpp  RHI.cpp  ShaderCompiler.cpp
Tests/: CMakeLists.txt
Tests/Source/Runner/: TestsRunner.cpp
Tests/Source/Tests/: CoreTests.cpp
(+398 files in other folders)
